--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -18,6 +18,9 @@
       <setting name="TwitchPassword" serializeAs="String">
         <value />
       </setting>
+      <setting name="TwithChannel" serializeAs="String">
+        <value />
+      </setting>
     </TwitchChatinator.Settings>
   </userSettings>
   <system.data>
