--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -21,6 +21,21 @@
       <setting name="TwithChannel" serializeAs="String">
         <value />
       </setting>
+      <setting name="PollOption1" serializeAs="String">
+        <value>Yes</value>
+      </setting>
+      <setting name="PollOption2" serializeAs="String">
+        <value>No</value>
+      </setting>
+      <setting name="PollOption3" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PollOption4" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PollChromaKey" serializeAs="String">
+        <value />
+      </setting>
     </TwitchChatinator.Settings>
   </userSettings>
   <system.data>
