--- a/TwitchChatinator/TwitchChatinator.csproj
+++ b/TwitchChatinator/TwitchChatinator.csproj
@@ -38,6 +38,8 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -50,29 +52,42 @@
     <Reference Include="System.Data.SQLite.Linq">
       <HintPath>packages\System.Data.SQLite.Linq.1.0.93.0\lib\net45\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\RunPoll.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RunPoll.Designer.cs">
+      <DependentUpon>RunPoll.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PollSetup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PollSetup.Designer.cs">
+      <DependentUpon>PollSetup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Libs\Log.cs" />
     <Compile Include="Libs\DataStore.cs" />
-    <Compile Include="Froms\MessageBrowser.cs">
+    <Compile Include="Forms\MessageBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Froms\MessageBrowser.Designer.cs">
+    <Compile Include="Forms\MessageBrowser.Designer.cs">
       <DependentUpon>MessageBrowser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Froms\SetCredentialsScreen.cs">
+    <Compile Include="Forms\SetCredentialsScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Froms\SetCredentialsScreen.Designer.cs">
+    <Compile Include="Forms\SetCredentialsScreen.Designer.cs">
       <DependentUpon>SetCredentialsScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -83,16 +98,22 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Libs\TwitchIRC.cs" />
-    <Compile Include="Froms\WelcomeScreen.cs">
+    <Compile Include="Forms\WelcomeScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Froms\WelcomeScreen.Designer.cs">
+    <Compile Include="Forms\WelcomeScreen.Designer.cs">
       <DependentUpon>WelcomeScreen.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Froms\MessageBrowser.resx">
+    <EmbeddedResource Include="Forms\MessageBrowser.resx">
       <DependentUpon>MessageBrowser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Froms\SetCredentialsScreen.resx">
+    <EmbeddedResource Include="Forms\PollSetup.resx">
+      <DependentUpon>PollSetup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RunPoll.resx">
+      <DependentUpon>RunPoll.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SetCredentialsScreen.resx">
       <DependentUpon>SetCredentialsScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -105,7 +126,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Froms\WelcomeScreen.resx">
+    <EmbeddedResource Include="Forms\WelcomeScreen.resx">
       <DependentUpon>WelcomeScreen.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
