--- a/TwitchChatinator/packages.config
+++ b/TwitchChatinator/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="IrcDotNet" version="0.4.1" targetFramework="net45" />
+  <package id="OpenTK" version="1.1.1589.5942" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.93.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.93.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.93.0" targetFramework="net45" />
