And more work...

--- a/TwitchChatinator/Settings.settings
+++ b/TwitchChatinator/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="PollChromaKey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="StorageEngine" Type="System.String" Scope="User">
+      <Value Profile="(Default)">SQLite</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
