--- a/TwitchChatinator/TwitchChatinator.csproj
+++ b/TwitchChatinator/TwitchChatinator.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -76,8 +76,10 @@
     <Compile Include="Forms\PollSetup.Designer.cs">
       <DependentUpon>PollSetup.cs</DependentUpon>
     </Compile>
-    <Compile Include="Libs\Log.cs" />
     <Compile Include="Libs\DataStore.cs" />
+    <Compile Include="Libs\DataStoreMemory.cs" />
+    <Compile Include="Libs\Log.cs" />
+    <Compile Include="Libs\DataStoreSQLite.cs" />
     <Compile Include="Forms\MessageBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
