Polls are working! (ish)

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -39,6 +39,21 @@
       <setting name="StorageEngine" serializeAs="String">
         <value>SQLite</value>
       </setting>
+      <setting name="PollAllowMulti" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PollOption1Color" serializeAs="String">
+        <value>000191255</value>
+      </setting>
+      <setting name="PollOption2Color" serializeAs="String">
+        <value>219112147</value>
+      </setting>
+      <setting name="PollOption3Color" serializeAs="String">
+        <value>124252000</value>
+      </setting>
+      <setting name="PollOption4Color" serializeAs="String">
+        <value>255165000</value>
+      </setting>
     </TwitchChatinator.Settings>
   </userSettings>
   <system.data>
