Refactor, more settings

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -21,6 +21,15 @@
       <setting name="TwithChannel" serializeAs="String">
         <value />
       </setting>
+      <setting name="StorageEngine" serializeAs="String">
+        <value>SQLite</value>
+      </setting>
+      <setting name="PollChromaKey" serializeAs="String">
+        <value>000000000</value>
+      </setting>
+      <setting name="PollAllowMulti" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="PollOption1" serializeAs="String">
         <value>Yes</value>
       </setting>
@@ -33,15 +42,6 @@
       <setting name="PollOption4" serializeAs="String">
         <value />
       </setting>
-      <setting name="PollChromaKey" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="StorageEngine" serializeAs="String">
-        <value>SQLite</value>
-      </setting>
-      <setting name="PollAllowMulti" serializeAs="String">
-        <value>False</value>
-      </setting>
       <setting name="PollOption1Color" serializeAs="String">
         <value>000191255</value>
       </setting>
@@ -53,6 +53,51 @@
       </setting>
       <setting name="PollOption4Color" serializeAs="String">
         <value>255165000</value>
+      </setting>
+      <setting name="_PollLeftMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="_PollRightMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="_PollTopMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="_PollBottomMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="_PollBarHeight" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="_PollBarWidth" serializeAs="String">
+        <value>300</value>
+      </setting>
+      <setting name="_PollFontName" serializeAs="String">
+        <value>Calibri</value>
+      </setting>
+      <setting name="_PollTitleSize" serializeAs="String">
+        <value>16</value>
+      </setting>
+      <setting name="_PollTitleColor" serializeAs="String">
+        <value>255255255</value>
+      </setting>
+      <setting name="_PollCountSize" serializeAs="String">
+        <value>12</value>
+      </setting>
+      <setting name="_PollCountColor" serializeAs="String">
+        <value>255255255</value>
+      </setting>
+      <setting name="_PollTotalSize" serializeAs="String">
+        <value>16</value>
+      </setting>
+      <setting name="_PollTotalColor" serializeAs="String">
+        <value>255255255</value>
+      </setting>
+      <setting name="_PollTotalWidth" serializeAs="String">
+        <value>60</value>
+      </setting>
+      <setting name="_PollBarSpacing" serializeAs="String">
+        <value>15</value>
       </setting>
     </TwitchChatinator.Settings>
   </userSettings>
