App is WORKING. YAY

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -73,7 +73,7 @@
         <value>300</value>
       </setting>
       <setting name="_PollFontName" serializeAs="String">
-        <value>Calibri</value>
+        <value>Segoe UI</value>
       </setting>
       <setting name="_PollTitleSize" serializeAs="String">
         <value>16</value>
