Made a bunch of stuff better.

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -99,6 +99,9 @@
       <setting name="_PollBarSpacing" serializeAs="String">
         <value>15</value>
       </setting>
+      <setting name="_PositionPollLocation" serializeAs="String">
+        <value>0, 0</value>
+      </setting>
     </TwitchChatinator.Settings>
   </userSettings>
   <system.data>
