Cleaned up Poll, Added Roll

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -54,52 +54,103 @@
       <setting name="PollOption4Color" serializeAs="String">
         <value>255165000</value>
       </setting>
-      <setting name="_PollLeftMargin" serializeAs="String">
+      <setting name="PollLeftMargin" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="_PollRightMargin" serializeAs="String">
+      <setting name="PollRightMargin" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="_PollTopMargin" serializeAs="String">
+      <setting name="PollTopMargin" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="_PollBottomMargin" serializeAs="String">
+      <setting name="PollBottomMargin" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="_PollBarHeight" serializeAs="String">
+      <setting name="PollBarHeight" serializeAs="String">
         <value>50</value>
       </setting>
-      <setting name="_PollBarWidth" serializeAs="String">
+      <setting name="PollBarWidth" serializeAs="String">
         <value>300</value>
       </setting>
-      <setting name="_PollFontName" serializeAs="String">
+      <setting name="PollFontName" serializeAs="String">
         <value>Segoe UI</value>
       </setting>
-      <setting name="_PollTitleSize" serializeAs="String">
+      <setting name="PollTitleSize" serializeAs="String">
         <value>16</value>
       </setting>
-      <setting name="_PollTitleColor" serializeAs="String">
+      <setting name="PollTitleColor" serializeAs="String">
         <value>255255255</value>
       </setting>
-      <setting name="_PollCountSize" serializeAs="String">
+      <setting name="PollCountSize" serializeAs="String">
         <value>12</value>
       </setting>
-      <setting name="_PollCountColor" serializeAs="String">
+      <setting name="PollCountColor" serializeAs="String">
         <value>255255255</value>
       </setting>
-      <setting name="_PollTotalSize" serializeAs="String">
+      <setting name="PollTotalSize" serializeAs="String">
         <value>16</value>
       </setting>
-      <setting name="_PollTotalColor" serializeAs="String">
+      <setting name="PollTotalColor" serializeAs="String">
         <value>255255255</value>
       </setting>
-      <setting name="_PollTotalWidth" serializeAs="String">
+      <setting name="PollTotalWidth" serializeAs="String">
         <value>60</value>
       </setting>
-      <setting name="_PollBarSpacing" serializeAs="String">
+      <setting name="PollBarSpacing" serializeAs="String">
         <value>15</value>
       </setting>
-      <setting name="_PositionPollLocation" serializeAs="String">
+      <setting name="PollWindowLocation" serializeAs="String">
+        <value>0, 0</value>
+      </setting>
+      <setting name="RollLeftMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="RollRightMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="RollTopMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="RollBottomMargin" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="RollTotalWidth" serializeAs="String">
+        <value>300</value>
+      </setting>
+      <setting name="RollTitleColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="RollRollerColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="RollEntriesColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="RollRollerText" serializeAs="String">
+        <value>Roll</value>
+      </setting>
+      <setting name="RollTitleFont" serializeAs="String">
+        <value>Segoe UI, 24pt</value>
+      </setting>
+      <setting name="RollRollerFont" serializeAs="String">
+        <value>Segoe UI, 28pt</value>
+      </setting>
+      <setting name="RollEntriesFont" serializeAs="String">
+        <value>Segoe UI, 16pt</value>
+      </setting>
+      <setting name="RollChromaKey" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="RollEntriesTop" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="RollRollerTop" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="RollTitleText" serializeAs="String">
+        <value>GIVEAWAY</value>
+      </setting>
+      <setting name="RollWindowLocation" serializeAs="String">
         <value>0, 0</value>
       </setting>
     </TwitchChatinator.Settings>
